--- a/downloads.html
+++ b/downloads.html
@@ -5,7 +5,7 @@
 		<title>Downloads page</title>
 		<style>
 			html, body {
-				height: 100%;
+				min-height: 100%;
 				width: 100%;
 				margin: 0;
 				border: 0;
